Fixed navbar issue where you could see content behind it, by adding a background color.

--- a/components/navbar/Navbar.module.scss
+++ b/components/navbar/Navbar.module.scss
@@ -5,6 +5,7 @@
   bottom: 0;
   z-index: 1;
   width: 100%;
+  background-color: colors.$white;
 
   ul {
     display: flex;
